2013-03-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/terminfo.c (grub_terminfo_cls): Issue an explicit
	gotoxy to 0,0.

2013-03-03  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove all trampoline support. Add -Wtrampolines when
	present. Remove symbols used for trampolines to make
	link fail if trampolines are present.

2013-03-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/script/execute.c (grub_script_arglist_to_argv): Move
	append out of its parent.

2013-03-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/regexp.c (set_matches): Move setvar out of its
	parent.

2013-03-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/env.c, include/grub/env.h: Change iterator through
	all vars to a macro. All users updated.

2013-03-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ieee1275/nand.c: Fix compilation on
	i386-ieee1275.

2013-03-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/cmos.h: Handle high CMOS addresses on sparc64.

2013-03-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/mips/loongson/cmos.h: Fix high CMOS addresses.

2013-03-02  Vladimir Serbinenko  <phcoder@gmail.com>

	Move to more hookless approach in IEEE1275 devices handling.

2013-03-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/term.c (grub_term_normal_color),
	(grub_term_highlight_color): Add back lost defaults.

2013-03-02  Vladimir Serbinenko  <phcoder@gmail.com>

	Make elfload not use hooks. Opt for flags and iterators instead.

2013-03-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/ia64/longjmp.S: Fix the name of longjmp function.
	* grub-core/lib/ia64/setjmp.S: Fix the name of setjmp function.

2013-03-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/script/execute.c (gettext_append): Remove nested functions.

2013-03-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/charset.c (grub_bidi_logical_to_visual): Add